fixed the spacing issue

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,14 +27,10 @@
   @apply hidden;
 }
 
-.accordion {
-  @apply px-8;
-}
-
 .accordion button {
-  @apply flex w-full items-center justify-between pb-5 border-b-[1px] border-b-pr-soft-blue/[0.3] text-nt-dark-blue font-medium text-sm;
+  @apply flex w-full items-center justify-between border-b-[1px] border-b-pr-soft-blue/[0.3] pb-5 text-sm font-medium text-nt-dark-blue;
 }
 
-.accordion [data-accordion-content]{
+.accordion [data-accordion-content] {
   @apply pt-5 pb-8;
 }
